# Nova7ChatMixInterface

./: .gitignore  README.md  install-local.sh  uninstall-local.sh
applet/: Cargo.toml
applet/res/: io.github.poppolouse.CosmicAppletNovaChatMix.desktop
applet/src/: main.rs
gnome/: io.github.poppolouse.NovaChatMix.desktop  io.github.poppolouse.NovaChatMixTray.desktop  nova_chatmix_gnome.py  nova_chatmix_indicator.py
mixer/: nova7_audio_priority.py  nova7_mixer.py
scripts/: add-to-cosmic-panel.sh  install-headsetcontrol.sh  nova7-virtualaudio.sh  remove-from-cosmic-panel.sh
systemd/: nova-chatmix-indicator.service  nova7-audio-priority.service  nova7-mixer.service  nova7-virtualaudio.service
